samples/_failures_safe/1761470382_4cba0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_582ecff4.c: In function ‘display_stats’:
./samples/SAFE/__tmp_582ecff4.c:155:12: error: missing terminating " character
  155 |     printf("Log Analysis
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_582ecff4.c:155:5: error: expected expression at end of input
  155 |     printf("Log Analysis
      |     ^~~~~~
./samples/SAFE/__tmp_582ecff4.c:155:5: error: expected declaration or statement at end of input
